# aider

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: lint.yml  ubuntu-tests.yml
aider/: api.py  main.py
aider/api/: __main__.py  main.py  security_api.py
aider/api/apis/: assistants_api.py  assistants_api_base.py
aider/api/impl/: assistants_api_base.py
aider/api/models/: array_of_content_parts_inner.py  assistant_object.py  assistant_object_response_format.py  assistant_object_tool_resources.py  assistant_object_tool_resources_code_interpreter.py  assistant_object_tool_resources_file_search.py  assistant_object_tools_inner.py  assistant_tools_code.py  assistant_tools_file_search.py  assistant_tools_file_search_file_search.py  assistant_tools_file_search_type_only.py  assistant_tools_function.py  assistants_named_tool_choice_function.py  auto_chunking_strategy.py  create_assistant_request.py  create_assistant_request_model.py  create_assistant_request_tool_resources.py  create_assistant_request_tool_resources_code_interpreter.py  create_assistant_request_tool_resources_file_search.py  create_assistant_request_tool_resources_file_search_vector_stores_inner.py  create_assistant_request_tool_resources_file_search_vector_stores_inner_chunking_strategy.py  create_message_request.py  create_message_request_attachments_inner.py  create_message_request_attachments_inner_tools_inner.py  create_message_request_content.py  create_run_request.py  create_run_request_model.py  create_run_request_tool_choice.py  create_run_request_truncation_strategy.py  create_thread_and_run_request.py  create_thread_and_run_request_tool_resources.py  create_thread_and_run_request_tools_inner.py  create_thread_request.py  create_thread_request_tool_resources.py  create_thread_request_tool_resources_file_search.py  create_thread_request_tool_resources_file_search_vector_stores_inner.py  delete_assistant_response.py  delete_message_response.py  delete_thread_response.py  file_search_ranking_options.py  (+65 more)
benchmark/: api-bench.py
requirements/: requirements-api.txt  requirements-dev.in  requirements-dev.txt
scripts/: download-openai-spec.sh  prune_models.py
tests/api/: test_api.py
tests/basic/: test_api.py
